Post method to create a customer
